menambahkan reason log untuk alasan di se
